# discord-bot-rust

./: Cargo.toml  README.md
src/: framework.rs  main.rs
src/commands/: command_register.rs  dice.rs  fish.rs  mod.rs  ping.rs  register.rs
src/listeners/: mod.rs
