[package]
authors = ["sifi_border"]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
poise = "0.3.0" 
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["rt-multi-thread"] }